# monocle-bridge

./: .gitignore  LICENSE  LICENSE.markdown  README.md  bridge.html  monocle-cli.py  pyproject.toml  server.py
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  README.md  SETUP.md  TROUBLESHOOTING.md  USAGE.md
tests/: __init__.py  conftest.py  test_bridge_html.py  test_integration.py  test_monocle_cli.py  test_server.py
