[project]
name = "monocle-bridge"
version = "0.1.0"
requires-python = ">=3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short -W ignore::DeprecationWarning"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "*.html"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
